<resources>
    <string name="app_name">Sokoni</string>
    <string name="recover_password">Enter the email used to register A link to reset your password will be sent to your
        email
    </string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="productdescription">You know what\'s sucky about regular flashlights? They only come in two colors:
        white or that yellowish-white that reminds us of the teeth of an avid coffee drinker. What fun is that kind of
        flashlight? We\'ll answer that: NO FUN AT ALL. You know what is fun? Using the Multi-Color LED Flashlight to
        cast a sickly green glow over your face while telling a zombie story around a campfire. No campfire? Make a fake
        one with the orange light!
    </string>
    <string name="no_connection">You internet connection is off</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pick_a_location">Pick a location</string>
    <string name="cannot_load_data_right_now_please_try_again">Cannot load data right now . Please try again</string>
    <string name="about_desc">Karibu and Welcome to SOKONI app . Do your shopping from anywhere at any time and get your
        goods delivered right at your door step. We pride strive to provide a truly one stop shop for all your shopping
        needs
    </string>
    <string name="default_notification_channel_id">12345678</string>
    <string name="code_confirmed_successfully_enter_your_new_desired_password">Code confirmed successfully . Enter your
        new desired password
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_orders">My Orders</string>
    <string name="my_account">My Account</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="log_out">Log Out</string>
    <string name="about">About</string>
    <string name="find_beast_deal">search</string>
</resources>
