<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_box_black_24dp"
                android:title="@string/my_account" />
        <item
                android:id="@+id/nav_orders"
                android:icon="@drawable/ic_history_black_24dp"
                android:title="@string/my_orders" />
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_applications_black_24dp"
                android:title="@string/settings"
                android:visible="false" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:title="@string/share" />
            <item
                    android:id="@+id/nav_log_out"
                    android:title="@string/log_out" />
            <item
                    android:id="@+id/nav_about"
                    android:title="@string/about" />
        </menu>
    </item>
</menu>
